@@ -1,3 +1,8 @@
+2013-12-22         Hiroshi Saito	<hiroshi@winpg.jp>
+
+	* pgsql.c (pg_clientencoding, pg_setclientencoding): Added new 
+	function to call.
+
 2013-12-05         Hiroshi Saito	<hiroshi@winpg.jp>
 
 	* pdf.c: support different versions for libharu.
